# thermy

./: .gitignore  README.md  build-mcpb.sh  manifest.json  mxw01.py  pyproject.toml  requirements.txt  thermy.py  thermy_cli.py  thermy_mcp.py
.github/workflows/: publish.yml
server/: main.py
